k8s/overlays/prod/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medal-bot
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: medal-bot
