k8s/overlays/prod/noop-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: noop-service
  namespace: medal-bot-prod
spec:
  type: ExternalName
  externalName: twitch.tv
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
