k8s/overlays/prod/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medal-bot-ingress
  namespace: medal-bot-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: medal-bot-prod-redirect-twitch@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ikuro.dev
      secretName: ikuro-prod-tls
  rules:
    - host: ikuro.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: noop-service
                port:
                  number: 80
          - path: /medallas
            pathType: Prefix
            backend:
              service:
                name: medal-bot-service
                port:
                  number: 80
